# adguard-external-dns

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: publish-docker-image.yaml
deploy/kustomize/: clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  kustomization.yaml  serviceaccount.yaml
src/: main.rs
