[package]
name = "adguard-external-dns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.79.0", features = ["runtime"] }
k8s-openapi = { version = "0.17.0", features = ["v1_25"] }
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3.26"
reqwest = { version = "0.11.14", features = ["json"] }
serde_json = "1.0.93"
serde = "1.0.152"
clap = { version = "4.1.7", features = ["env", "derive"] } 
regex = { version = "1.7.1", features = ["std"], default-features = false }


[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
